public enum GameDifficulty {
    // 游戏难度
    EASY,
    INTERMEDIATE,
    DIFFICULT
}
